--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "antd": "^4.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.54.9",
     "scss": "^0.2.4"
   },
